--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     flex-shrink: 0;
 }
 .section-3{
-    margin: 100px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
     background: grey;
@@ -96,4 +96,27 @@ body{
     flex-shrink: 0;
     width: 112px;
 
+}
+.section-4{
+    flex-shrink: 0;
+    gap: 200px;
+    margin: 100px;
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    background: #3882F6;
+}
+.section-4 ul{
+    flex-shrink: 0;
+    list-style: none;
+    
+}
+.section-4 .item1{
+    font-size: x-large;
+}
+.section-4 button{
+    flex-shrink: 0;;
+    flex-wrap: nowrap;
+    display: flex;
+    align-self: center;
 }
