--- a/style.css
+++ b/style.css
@@ -1,44 +1,66 @@
 body{
     display: flex;
     flex-direction: column;
-
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header{
-
+    gap: 100px;
+    background: #1F2937;
     display: flex;
     justify-content: space-between;
 }
 .header-left{
+    color: white;
     flex-shrink: 0;
     align-self: center;
     margin-left: 100px;
 }
+a:link{text-decoration: none; color: white;}
 .ul1{
-
-    margin-right: 100px;
+    font-size: 18px;
     display: flex;
     gap: 16px;
     list-style: none;
 }
 .section-1{
-    background: grey;
+    background: #1F2937;
     padding: 100px;
     display: flex;
     justify-content: center;
 }
 .section-1 ul{
+    color: white;
     flex-shrink: 0;
     width: 300px;
     list-style: none;
 }
 .section-1 .item1{
-    font-size: xx-large;
+    font-size: 48px;
+    font: #f9faf8;
+    font-weight: bolder;
+}
+.section-1 .item2{
+    font-size: 18px;
+}
+.section-1 button{
+    margin-top: 10px;
     font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100px;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 0 8px 8px 8px;
+    color: white;
+    background: #3882F6 ;
 }
 .section-1 img{
+
     width: 300px;
 }
 .section-2-header{
+    font-size: 36px;
+    font-weight: bolder;
     margin: 50px;
     display: flex;
     justify-content: center;
@@ -49,12 +71,15 @@ body{
     font-size: xx-large;
 }
 .section-2-images{
+    
     justify-content: center;
     display: flex;
     flex-wrap: nowrap;
     gap: 30px;
 }
 .section-2-images img{
+    border-radius: 10px;
+    border: 5px solid #3882F6 ;
     width: 200px;
 }
 .section-2-description{
@@ -65,7 +90,8 @@ body{
     flex-wrap: nowrap;
 }
 .section-2-description div{
-    width: 200px;
+    padding: 10px;
+    width: 190px;
     flex-wrap: nowrap;
     flex-shrink: 0;
 }
@@ -73,20 +99,22 @@ body{
     padding: 100px;
     display: flex;
     flex-direction: column;
-    background: grey;
+    background: #e5e7eb;
 }
 .section-3-quote{
 
     display: flex;
     justify-content: center;
-    font-size: x-large;
+    font-size: 36px;
+    
 }
 .section-3-quote div{
-    
+    font-style: oblique;
     width: 750px;
     flex-shrink: 0;
 }
 .section-3-name{
+    font-weight: bold;
     display: flex;
     justify-content: flex-end;
 }
@@ -98,25 +126,41 @@ body{
 
 }
 .section-4{
-    flex-shrink: 0;
-    gap: 200px;
+    width: 700px;
+    border-radius: 10px;
+    gap: 100px;
     margin: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 30px;
     background: #3882F6;
 }
 .section-4 ul{
+
+    color: white;
     flex-shrink: 0;
     list-style: none;
     
 }
 .section-4 .item1{
+    font-weight: 500;
     font-size: x-large;
 }
 .section-4 button{
-    flex-shrink: 0;;
-    flex-wrap: nowrap;
+    margin-top: 10px;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100px;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 0 8px 8px 8px;
+    color: white;
+    border: 2px solid white;
+    background: #3882F6 ;
+}
+.footer{
     display: flex;
-    align-self: center;
+    justify-content: center;
+    background: #1F2937;
 }
