--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ a:link{text-decoration: none; color: white;}
     list-style: none;
 }
 .section-1{
+    gap: 50px;
     background: #1F2937;
     padding: 100px;
     display: flex;
@@ -43,6 +44,7 @@ a:link{text-decoration: none; color: white;}
     font-size: 18px;
 }
 .section-1 button{
+    border: #3882F6;
     margin-top: 10px;
     font-weight: bold;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -50,7 +52,6 @@ a:link{text-decoration: none; color: white;}
     height: 30px;
     font-size: 18px;
     border-radius: 5px;
-    padding: 0 8px 8px 8px;
     color: white;
     background: #3882F6 ;
 }
@@ -119,10 +120,10 @@ a:link{text-decoration: none; color: white;}
     justify-content: flex-end;
 }
 .section-3-name div{
-    
+    margin-right: 200px;
     font-size: x-large;
     flex-shrink: 0;
-    width: 112px;
+    width: 160px;
 
 }
 .section-4{
@@ -160,6 +161,8 @@ a:link{text-decoration: none; color: white;}
     background: #3882F6 ;
 }
 .footer{
+    padding: 10px;
+    color: white;
     display: flex;
     justify-content: center;
     background: #1F2937;
